--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <b>Hello Everyone</b>
-    <p style="color:blue;">Honesty begins where ego ends</p>  
+    <p>Honesty begins where ego ends</p>  
 </body>
 </html>
