--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <b>Hello Everyone</b>
-    <p>Honesty begins where ego ends</p>  
+    <p>Honesty begins where ego ends</p>
+    <p>hello </p>  
 </body>
 </html>
